--- a/data/locales/Arabic.txt
+++ b/data/locales/Arabic.txt
@@ -1,10 +1,10 @@
-﻿// Arabic translation made by:
+// Arabic translation made by:
 // - Majid - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// menu buttons
+// menu buttons
 
 000 ابدأ لعبة محلية
 105 ابدأ التدريب
