--- a/data/locales/Deutsch.txt
+++ b/data/locales/Deutsch.txt
@@ -1,10 +1,10 @@
-﻿// German translation made by:
+// German translation made by:
 // - Atto - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// Menü Knöpfe
+// Menü Knöpfe
 
 000 Lokales Spiel starten
 105 Tutorial starten
