--- a/data/locales/English.txt
+++ b/data/locales/English.txt
@@ -1,10 +1,10 @@
-﻿// English translation made by:
+// English translation made by:
 // - Felix & Simon - original translators
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// menu buttons
+// menu buttons
 
 000 Start Local Game
 105 Start Tutorial
