--- a/data/locales/Espanol.txt
+++ b/data/locales/Espanol.txt
@@ -1,10 +1,10 @@
-﻿// Spanish translation made by:
+// Spanish translation made by:
 // - Gastón - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// Botones de menú
+// Botones de menú
 
 000 Empezar Juego Local
 105 Empezar Tutorial
