--- a/data/locales/Francais.txt
+++ b/data/locales/Francais.txt
@@ -1,10 +1,10 @@
-﻿// French translation made by:
+// French translation made by:
 // - Ludovic - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// Interface du Menu Principal
+// Interface du Menu Principal
 
 000 Démarrer une partie locale
 105 Lancer le Tutoriel
