--- a/data/locales/Norwegian.txt
+++ b/data/locales/Norwegian.txt
@@ -1,10 +1,10 @@
-﻿// Norwegian translation made by:
+// Norwegian translation made by:
 // - Thomas - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// menu buttons
+// menu buttons
 
 000 Start lokalt spill
 105 Start tutorial
