--- a/data/locales/Russian.txt
+++ b/data/locales/Russian.txt
@@ -1,10 +1,10 @@
-﻿// Russian translation made by:
+// Russian translation made by:
 // - Drakmail - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// menu buttons
+// menu buttons
 
 000 Начать игру
 105 Пройти обучение
