--- a/data/locales/Suomi.txt
+++ b/data/locales/Suomi.txt
@@ -1,10 +1,10 @@
-﻿// Finnish translation made by:
+// Finnish translation made by:
 // - Pavoo - original translator
 // 
 // Please comment any changes you make to the file (required by the GPL license),
 // and leave an e-mail address where later contributors can contact you!
 
-﻿// menu buttons
+// menu buttons
 
 000 Paikallinen peli
 105 Tutoriaali
