s/www.marsshooter.org/mars-game.sourceforge.net/
The marsshooter.org domain has been taken over by a 3th party and is
filled with spam now. Replace all occurences with mars-game.sourceforge.net,
as was already done in README.md a while ago.

--- a/data/locales/Arabic.txt
+++ b/data/locales/Arabic.txt
@@ -110,7 +110,7 @@
 
 // about
 
-057 هذه أولى محاولاتي لإنشاء لعبة في أوبن‌جي‌إل باستخدام SFML. إنها لعبة لشخصين يقودان سفنًا في مشهد فضائي ثنائي الأبعاد تحكمه قوانين الجاذبية. \n\nالموقع الإلكتروني: \nhttp://www.marsshooter.org
+057 هذه أولى محاولاتي لإنشاء لعبة في أوبن‌جي‌إل باستخدام SFML. إنها لعبة لشخصين يقودان سفنًا في مشهد فضائي ثنائي الأبعاد تحكمه قوانين الجاذبية. \n\nالموقع الإلكتروني: \nhttp://mars-game.sourceforge.net
 
 // license
 
