--- a/data/locales/Mongolian.txt
+++ b/data/locales/Mongolian.txt
@@ -124,7 +124,7 @@
 
 // about
 
-057 Энэ тоглоом нь анхны дэмжлэг болох OpenGL болон SFML дээр суурилсан. 2 тоглогчоос бүрдэх бөгөөд, сансар дээр явах хөлөгийг тухай ба, дэлхийн таталцлын хуулиас санаачласан болно. \n\nВебсайт: \nhttp://www.marsshooter.org\n\n© 2010-2011 Felix Lauer & Simon Schneegans
+057 Энэ тоглоом нь анхны дэмжлэг болох OpenGL болон SFML дээр суурилсан. 2 тоглогчоос бүрдэх бөгөөд, сансар дээр явах хөлөгийг тухай ба, дэлхийн таталцлын хуулиас санаачласан болно. \n\nВебсайт: \nhttp://mars-game.sourceforge.net\n\n© 2010-2011 Felix Lauer & Simon Schneegans
 
 // license
 
