--- a/data/locales/Russian.txt
+++ b/data/locales/Russian.txt
@@ -130,7 +130,7 @@
 
 // about
 
-057 Это первая попытка сделать игру с использование OpenGL и SFML. Эта игра для двух игроков, летающих на кораблях в двухмерном космическом пространстве, управляемом законами гравитации. \n\nДомашняя страница: \nhttp://www.marsshooter.org\n\n© 2010-2011 Felix Lauer & Simon Schneegans
+057 Это первая попытка сделать игру с использование OpenGL и SFML. Эта игра для двух игроков, летающих на кораблях в двухмерном космическом пространстве, управляемом законами гравитации. \n\nДомашняя страница: \nhttp://mars-game.sourceforge.net\n\n© 2010-2011 Felix Lauer & Simon Schneegans
 
 // license
 
